package com.nh006220.engine.ObjectTemplates;

/**
 * types of collisions a drone can have
 */
public enum CollisionType {
    Left, Right, Top, Bottom, Object
}
