package com.nh006220.engine.ObjectTemplates;

/**
 * object types that can be used in the simulation
 */
public enum DroneType {
    MovingObject1, StaticObject1, BigDrone, MovingObject2, building, StaticTree, FastDrone
}
