@startuml

title __OBJECTTEMPLATES's Class Diagram__\n

  namespace com.nh006220.engine {
    namespace ObjectTemplates {
      enum CollisionType {
        Bottom
        Left
        Object
        Right
        Top
      }
    }
  }
  

  namespace com.nh006220.engine {
    namespace ObjectTemplates {
      enum DroneType {
        BigDrone
        FastDrone
        MovingObject1
        MovingObject2
        StaticObject1
        StaticTree
        building
      }
    }
  }
  

  namespace com.nh006220.engine {
    namespace ObjectTemplates {
      abstract class com.nh006220.engine.ObjectTemplates.MovingObject {
          - changeDirection : int
          - colliding : boolean
          - drawHitBox : boolean
          - health : int
          - hitBox : Rectangle
          - hitBoxColor : Color
          - hitBoxRange : double
          - velMultiply : double
          + draw()
          + getColliding()
          + getHitBoxColor()
          + getHitBoxRange()
          + getVelMultiply()
          + isAlive()
          + isColliding()
          + isColliding()
          + isDrawHitBox()
          + move()
          + onCollision()
          + setHitBox()
          + setHitBoxColor()
          + setHitBoxRange()
          + setVelMultiply()
          + update()
          # MovingObject()
          # setDrawHitBox()
          # setHealth()
          - getCollidingWith()
          - getCollisionType()
          - getHealth()
          - getHealthColor()
          - getHitBox()
          - isCollidingWithObject()
          - isInBounds()
          - setColliding()
          - setCollidingWith()
          - setCollisionType()
      }
    }
  }
  

  namespace com.nh006220.engine {
    namespace ObjectTemplates {
      abstract class com.nh006220.engine.ObjectTemplates.Object {
          - image : Image
          - imageString : String
          - moving : boolean
          - name : String
          - rectangle : Rectangle
          - velMultiply : double
          - velocity : Point2D
          + draw()
          + getDroneType()
          + getHeight()
          + getImage()
          + getImageString()
          + getName()
          + getRotate()
          + getVelMultiply()
          + getVelocity()
          + getWidth()
          + getX()
          + getY()
          + isMoving()
          + rotateAngle()
          + setDroneType()
          + setHeight()
          + setImage()
          + setName()
          + setPos()
          + setRectangle()
          + setVelMultiply()
          + setWidth()
          + setX()
          + setY()
          + toString()
          + update()
          ~ Object()
          ~ getRectangle()
          ~ setMoving()
          ~ setVelocity()
          - setImage()
      }
    }
  }
  

  namespace com.nh006220.engine {
    namespace ObjectTemplates {
      abstract class com.nh006220.engine.ObjectTemplates.StaticObject {
          + update()
          # StaticObject()
      }
    }
  }
  

  com.nh006220.engine.ObjectTemplates.MovingObject -up-|> com.nh006220.engine.ObjectTemplates.Object
  com.nh006220.engine.ObjectTemplates.MovingObject o-- com.nh006220.engine.ObjectTemplates.Object : collidingWith
  com.nh006220.engine.ObjectTemplates.MovingObject o-- com.nh006220.engine.ObjectTemplates.CollisionType : collisionType
  com.nh006220.engine.ObjectTemplates.Object o-- com.nh006220.engine.ObjectTemplates.DroneType : droneType
  com.nh006220.engine.ObjectTemplates.StaticObject -up-|> com.nh006220.engine.ObjectTemplates.Object


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
